# kde-sysmon

./: CMakeLists.txt  README.md
src/: averager.cpp  averager.h  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp  query.cpp  query.h  sampler.cpp  sampler.h  writer.cpp  writer.h
systemd/: kde-sysmon.service  sysmon.service
